<resources>
    <string name="app_name">StressFree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigate</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_habits">Habits</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_research">Research</string>
    <string name="menu_techniques">Techniques</string>
    <string name="menu_about">About</string>
    <string name="piechart">piechart</string>

</resources>